# clocker

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  startup.sh
.github/workflows/: docker-image.yml  pr-validation.yml
app/: __init__.py  database.py  dependencies.py  main.py  model.py
app/routes/: __init__.py
app/routes/api/: __init__.py  entries.py  statistics.py
app/routes/web/: __init__.py  calendar.py  entries.py  statistics.py
app/services/: calendar.py  display.py  statistics.py  time_logger.py
app/static/css/: base.css  calendar.css  entries.css  statistics.css  toast.css
app/static/js/: calendar.js  entries.js
app/templates/: calendar.html  entries.html  statistics.html
app/utils/: timely.py
clocker/: __main__.py  database.py  model.py
clocker/routes/: __init__.py  calendar.py  entries.py  statistics.py
clocker/services/: calendar.py  statistics.py  time_logger.py
clocker/static/css/: calendar.css  entries.css
clocker/static/js/: calendar.js  entries.js
clocker/templates/: entries.html  statistics.html
tests/: __init__.py
tests/unit/routes/api/: test_entries.py  test_statistics.py
tests/unit/services/: conftest.py  test_calendar.py  test_display.py  test_statistics.py  test_time_logger.py
