[project]
name = "clocker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "fastapi[standard]>=0.115.6",
    "holidays>=0.64",
    "sqlalchemy[asyncio]>=2.0.37",
    "sqlmodel>=0.0.22",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.1",
    "types-pyyaml>=6.0.12.20241230",
]

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
disallow_untyped_decorators = false

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"
fix = true

[tool.ruff.lint]
select = ["E", "F", "B", "Q", "W", "N", "D", "UP", "S", "PTH", "ISC"]
ignore = ["E501", "W505", "D100", "D104", "D401", "B008"]

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-decorators = ["typing.overload"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
