[project]
name = "clocker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi[standard]>=0.121.3",
    "holidays>=0.85,<1.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.0",
    "ruff>=0.14.6",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
disallow_untyped_decorators = false

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"
fix = true

[tool.ruff.lint]
select = ["E", "F", "B", "Q", "W", "N", "D", "UP", "S", "PTH", "ISC"]
ignore = ["E501", "W505", "D100", "D104", "D401", "B008"]

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-decorators = ["typing.overload"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
